--- a/source/form.html
+++ b/source/form.html
@@ -62,55 +62,55 @@
   <h1 class="main-container__title">Подбор программы</h1>
   <p class="main-container__paragraph">Заполните анкету, и мы подберем программу питания для вашего кота</p>
 
-  <section class="info-section">
+  <div class="info-section">
   <form class="info-form">
-    <label class="info-label" for="fname">Имя:*</label>
-    <input class="info-input" type="text" id="fname" name="Барсик">
-    <label class="info-label" for="lname">Вес (кг):*</label>
-    <input class="info-input" type="text" id="lname" name="7">
-    <label class="info-label" for="lname">Возраст (лет):</label>
-    <input class="info-input" type="text" id="lname" name="7">
+    <label class="info-label" for="name">Имя:*</label>
+    <input class="info-input" type="text" id="name" placeholder="Барсик">
+    <label class="info-label" for="weight">Вес (кг):*</label>
+    <input class="info-input" type="number" id="weight" min="0" max="500" placeholder="7">
+    <label class="info-label" for="age">Возраст (лет):</label>
+    <input class="info-input" type="number" id="age" min="0" max="70" placeholder="7">
   </form>
-<form class="info-form" class="info-form__radio">
-  <input class="info-input" type="radio" id="html" name="fav_language" value="Похудение" checked>
-  <label class="info-label" for="Похудение">Похудение</label><br>
-  <input class="info-input" type="radio" id="css" name="fav_language" value="Набор массы">
-  <label class="info-label" for="Набор массы">Набор массы</label><br>
-  <input class="info-input" type="radio" id="javascript" name="fav_language" value="Не знаю (Нужен ваш совет)">
-  <label class="info-label" for="Не знаю (Нужен ваш совет)">Не знаю (Нужен ваш совет)</label>
+<form class="info-form info-form__radio">
+  <input class="info-input" type="radio" id="weight-loss" name="diet" checked>
+  <label class="info-label" for="weight-loss">Похудение</label><br>
+  <input class="info-input" type="radio" id="weight-gain" name="diet">
+  <label class="info-label" for="weight-gain">Набор массы</label><br>
+  <input class="info-input" type="radio" id="idk" name="diet">
+  <label class="info-label" for="idk">Не знаю (Нужен ваш совет)</label>
 </form>
-</section>
+</div>
 </section>
 
 <section class="contacts-section">
   <h2 class="contact-title">Контактные данные (владельца кота)</h2>
   <form class="contact-form">
-  <label class="contact-label" for="fname">E-mail:*</label>
-    <input class="contact-input" type="email" id="fname" name="кuklachev@gmail.com">
-    <label class="contact-label"  for="lname">Телефон:*</label>
-    <input class="contact-input" type="number" id="lname" name="8 (960) 900-60-90">
+  <label class="contact-label" for="email">E-mail:*</label>
+    <input class="contact-input" type="email" id="email" name="кuklachev@gmail.com">
+    <label class="contact-label"  for="number">Телефон:*</label>
+    <input class="contact-input" type="number" id="number" name="8 (960) 900-60-90">
   </form>
 </section>
 
 <section class="comments-section">
   <h2 class="comments-title">Комментарий</h2>
   <form class="comments-form">
-  <input class="comments-input" type="email" id="fname" name="Расскажите обо всех повадках кота">
+  <input class="comments-input" type="text" id="comment" name="Расскажите обо всех повадках кота">
 </form>
 </section>
 
 <section class="additional-section">
   <h2 class="additional-title">Дополнительно</h2>
   <form class="additional-form">
-    <input class="additional-input" type="checkbox" id="vehicle1" name="vehicle1" value="Bike" checked>
-    <label class="additional-label" for="vehicle1"> Сахарозаменитель</label>
-    <input class="additional-input" type="checkbox" id="vehicle2" name="vehicle2" value="Car">
-    <label class="additional-label" for="vehicle2"> Питьевая вода</label>
-    <input class="additional-input" type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
-    <label class="additional-label" for="vehicle3"> Молоко</label>
-    <input class="additional-input" type="checkbox" id="vehicle2" name="vehicle2" value="Car">
-    <label class="additional-label" for="vehicle2"> Витамины</label>
-    <input class="additional-input" class="additional-button" type="submit" value="Отправить заявку">
+    <input class="additional-input" type="checkbox" id="sugar" name="sugar" checked>
+    <label class="additional-label" for="sugar"> Сахарозаменитель</label>
+    <input class="additional-input" type="checkbox" id="water" name="water">
+    <label class="additional-label" for="water"> Питьевая вода</label>
+    <input class="additional-input" type="checkbox" id="milk" name="milk">
+    <label class="additional-label" for="milk"> Молоко</label>
+    <input class="additional-input" type="checkbox" id="vitamins" name="vitamins">
+    <label class="additional-label" for="vitamins"> Витамины</label>
+    <input class="additional-input additional-button" type="submit" value="Отправить заявку">
   </form>
   <p class="additional-text">* — Обязательные поля</p>
 </section>
@@ -118,7 +118,7 @@
 
 
 <footer class="main-footer">
-  <img class="map__footer" src="img/map.png" alt="Карта" width="1440px" height="400px">
+  <img class="map__footer" src="img/map.png" alt="Карта" width="1440" height="400">
   <section class="section-footer">
     <div class="wrapper-footer">
       <h3 class="title-footer">Приглашаем к сотрудничеству дилеров!</h3>
@@ -128,7 +128,7 @@
         </div>
     </div>
   </section>
-  <section class="main-footer__contacts">
+  <div class="main-footer__contacts">
    <a class="logo__footer" href="index.html">
     <svg xmlns="http://www.w3.org/2000/svg" width="118" height="21" viewBox="0 0 118 21" fill="none">
       <path d="M1.42351 19.2159C0.391283 17.7277 -0.102273 15.9474 0.0207226 14.156V6.84405C-0.109487 5.03944 0.376607 3.24353 1.40346 1.73542C2.33197 0.572011 3.91845 -0.00644536 6.16291 5.41628e-05C8.40736 0.00655368 9.92704 0.516766 10.722 1.53069C11.6912 2.78717 12.1642 4.3407 12.0546 5.90812V7.62399H7.90636V5.76188C7.90077 5.27192 7.85723 4.78307 7.77611 4.29949C7.72595 3.9494 7.56075 3.6245 7.30517 3.3733C7.1474 3.24166 6.96423 3.14195 6.76637 3.08001C6.56852 3.01807 6.35995 2.99515 6.15288 3.01258C5.8555 2.9694 5.55167 3.01643 5.28273 3.14726C5.0138 3.2781 4.79283 3.48638 4.6499 3.74378C4.38644 4.42844 4.27049 5.15851 4.30923 5.88862V15.1699C4.26352 15.9049 4.39743 16.6399 4.7 17.3148C4.84457 17.5582 5.05909 17.7553 5.31721 17.8817C5.57533 18.0082 5.86578 18.0585 6.15288 18.0265C6.435 18.0653 6.72251 18.0164 6.97441 17.8869C7.22631 17.7573 7.42973 17.5537 7.55567 17.305C7.79804 16.6191 7.90347 15.8944 7.86628 15.1699V13.2201H12.0145V14.9067C12.1366 16.4972 11.7023 18.0812 10.7821 19.4011C9.90032 20.4735 8.3773 21 6.21301 21C4.04871 21 2.35536 20.415 1.42351 19.2159Z" fill="#111111"/>
@@ -143,21 +143,21 @@
     </svg>
   </a>
 
-<section class="main-footer__social">
+<div class="main-footer__social">
 <ul class="social__list">
-  <li class="social__item"><a href="vk.com"><img src="img/vk.png" alt="В контакте" width="26.96px" height="17px"></a></li>
-  <li class="social__item"><a href="youtube.com"><img src="img/youtube.png" alt="Youtube" width="24px" height="18.68px"></a></li>
-  <li class="social__item"><a href="telegram.com"><img src="img/telegram.png" alt="Телеграм" width="19.7px" height="17.07px"></a></li>
+  <li class="social__item"><a href="vk.com"><img src="img/vk.png" alt="В контакте" width="27" height="17"></a></li>
+  <li class="social__item"><a href="youtube.com"><img src="img/youtube.png" alt="Youtube" width="24" height="19"></a></li>
+  <li class="social__item"><a href="telegram.com"><img src="img/telegram.png" alt="Телеграм" width="20" height="18"></a></li>
 </ul>
-</section>
+</div>
 
-  <section class="main-footer__htmlacademy">
+  <div class="main-footer__htmlacademy">
     <a class="main-footer__link" href="htmlacademy.ru">
     <p class="main-footer__text">HTML Academy</p>
-    <img class="main-footer__image" src="img/лого_html_academy.png" alt="Логотип Html Academy" width="27" height="34px">
+    <img class="main-footer__image" src="img/лого_html_academy.png" alt="Логотип Html Academy" width="27" height="34">
   </a>
-  </section>
-</section>
+  </div>
+</div>
 </footer>
 </body>
 </html>
