--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Кэт энерджи</title>
   </head>
   <body class="page__body">
-    <img src="img/index-background-desktop 1.jpg" alt="Кот облизывается" width="720px" height="694px">
+    <img src="img/index-background-desktop.jpg" alt="Кот облизывается" width="720" height="694">
 
 <header class="main-header">
   <a class="main-header__logo" href="index.html">
@@ -96,25 +96,25 @@
   <ul class="advantages-list">
   <li class="advantages-item">
   <span class="advantages-background">1</span>
-  <img class="advantages-image" src="img/leaf.png" alt="Лист дерева" width="24.8px" height="28px">
+  <img class="advantages-image" src="img/leaf.png" alt="Лист дерева" width="25" height="28">
   <p class="advantages-paragraph">Функциональное питание содержит только полезные питательные вещества.</p>
   </li>
 
 <li  class="advantages-item">
   <span class="advantages-background">2</span>
-  <img class="advantages-image" src="img/powder.png" alt="Порошок" width="25.98px" height="28.51px">
+  <img class="advantages-image" src="img/powder.png" alt="Порошок" width="26" height="29">
   <p class="advantages-paragraph">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
   </li>
 
 <li class="advantages-item">
   <span class="advantages-background">3</span>
-  <img class="advantages-image" src="img/icon_eat.png" alt="Вилка и нож" width="25px" height="30px">
+  <img class="advantages-image" src="img/icon_eat.png" alt="Вилка и нож" width="25" height="30">
   <p class="advantages-paragraph">Замените один-два приема обычной еды на наше функциональное питание.</p>
 </li>
 
 <li class="advantages-item">
   <span class="advantages-background">4</span>
-  <img class="advantages-image" src="img/watch.png" alt="Часы"  width="26px" height="31px">
+  <img class="advantages-image" src="img/watch.png" alt="Часы"  width="26" height="31">
   <p class="advantages-paragraph">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
 </li>
 </ul>
@@ -122,7 +122,7 @@
 
 <section class="aside">
 <h2 class="aside-title">Живой пример</h2>
-<section class="aside-wrapper">
+<div class="aside-wrapper">
   <p class="aside-paragraph">Борис сбросил 5 кг за 2 месяца, просто заменив свой
     обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих
     привычек и по-прежнему спит по 16 часов в день. </p>\
@@ -132,13 +132,13 @@
       <span class="aside-span">60 ДНЕЙ</span>
     <p class="aside-text">Затраты на питание: </p>
     <span class="aside-span">15 000 РУБ.</span>
-</section>
-<img class="aside__image" src="img/slides.jpg" alt="Сравнение толстого и худого Бориса" width="560px" height="512px">
+  </div>
+<img class="aside__image" src="img/slides.jpg" alt="Сравнение толстого и худого Бориса" width="560" height="512">
 </section>
 </main>
 
 <footer class="main-footer">
-  <img class="map__footer" src="img/map.png" alt="Карта" width="1440px" height="400px">
+  <img class="map__footer" src="img/map.png" alt="Карта" width="1440" height="400">
   <section class="section-footer">
     <div class="wrapper-footer">
       <h3 class="title-footer">Приглашаем к сотрудничеству дилеров!</h3>
@@ -148,7 +148,7 @@
         </div>
     </div>
   </section>
-  <section class="main-footer__contacts">
+  <div class="main-footer__contacts">
    <a class="logo__footer" href="index.html">
     <svg xmlns="http://www.w3.org/2000/svg" width="118" height="21" viewBox="0 0 118 21" fill="none">
       <path d="M1.42351 19.2159C0.391283 17.7277 -0.102273 15.9474 0.0207226 14.156V6.84405C-0.109487 5.03944 0.376607 3.24353 1.40346 1.73542C2.33197 0.572011 3.91845 -0.00644536 6.16291 5.41628e-05C8.40736 0.00655368 9.92704 0.516766 10.722 1.53069C11.6912 2.78717 12.1642 4.3407 12.0546 5.90812V7.62399H7.90636V5.76188C7.90077 5.27192 7.85723 4.78307 7.77611 4.29949C7.72595 3.9494 7.56075 3.6245 7.30517 3.3733C7.1474 3.24166 6.96423 3.14195 6.76637 3.08001C6.56852 3.01807 6.35995 2.99515 6.15288 3.01258C5.8555 2.9694 5.55167 3.01643 5.28273 3.14726C5.0138 3.2781 4.79283 3.48638 4.6499 3.74378C4.38644 4.42844 4.27049 5.15851 4.30923 5.88862V15.1699C4.26352 15.9049 4.39743 16.6399 4.7 17.3148C4.84457 17.5582 5.05909 17.7553 5.31721 17.8817C5.57533 18.0082 5.86578 18.0585 6.15288 18.0265C6.435 18.0653 6.72251 18.0164 6.97441 17.8869C7.22631 17.7573 7.42973 17.5537 7.55567 17.305C7.79804 16.6191 7.90347 15.8944 7.86628 15.1699V13.2201H12.0145V14.9067C12.1366 16.4972 11.7023 18.0812 10.7821 19.4011C9.90032 20.4735 8.3773 21 6.21301 21C4.04871 21 2.35536 20.415 1.42351 19.2159Z" fill="#111111"/>
@@ -163,21 +163,21 @@
     </svg>
   </a>
 
-<section class="main-footer__social">
+<div class="main-footer__social">
 <ul class="social__list">
-  <li class="social__item"><a href="vk.com"><img src="img/vk.png" alt="В контакте" width="26.96px" height="17px"></a></li>
-  <li class="social__item"><a href="youtube.com"><img src="img/youtube.png" alt="Youtube" width="24px" height="18.68px"></a></li>
-  <li class="social__item"><a href="telegram.com"><img src="img/telegram.png" alt="Телеграм" width="19.7px" height="17.07px"></a></li>
+  <li class="social__item"><a href="vk.com"><img src="img/vk.png" alt="В контакте" width="27" height="17"></a></li>
+  <li class="social__item"><a href="youtube.com"><img src="img/youtube.png" alt="Youtube" width="24" height="19"></a></li>
+  <li class="social__item"><a href="telegram.com"><img src="img/telegram.png" alt="Телеграм" width="20" height="18"></a></li>
 </ul>
-</section>
+</div>
 
-  <section class="main-footer__htmlacademy">
+  <div class="main-footer__htmlacademy">
     <a class="main-footer__link" href="htmlacademy.ru">
     <p class="main-footer__text">HTML Academy</p>
-    <img class="main-footer__image" src="img/лого_html_academy.png" alt="Логотип Html Academy" width="27" height="34px">
+    <img class="main-footer__image" src="img/лого_html_academy.png" alt="Логотип Html Academy" width="27" height="34">
   </a>
-  </section>
-</section>
+</div>
+</div>
 </footer>
 </body>
 </html>
