--- a/source/form.html
+++ b/source/form.html
@@ -5,6 +5,7 @@
     <title>HTML Academy: Кэт энерджи</title>
 </head>
   <body class="page__body">
+
 <header class="main-header">
   <a class="main-header__logo" href="index.html">
     <svg class="main-header__logo-image" xmlns="http://www.w3.org/2000/svg" width="70" height="59" viewBox="0 0 70 59" fill="none">
@@ -31,7 +32,6 @@
     <path d="M13.878 52.1259L9.33862 55.4489L12.1321 59L16.1427 55.0124L13.878 52.1259Z" fill="#FDC305"/>
     <path d="M25.8708 27.774C25.8708 27.774 22.0695 26.3457 20.6727 25.9588C20.0169 25.6735 19.2926 25.5808 18.5855 25.6915C17.8783 25.8023 17.2178 26.1118 16.6819 26.5837C16.1351 27.0597 15.6979 27.6471 15.4001 28.3061C15.1022 28.9651 14.9507 29.6802 14.9558 30.4027C15.1667 30.8637 15.3273 31.3459 15.4347 31.841C15.4846 32.3171 14.2374 32.2675 13.4393 32.2675C12.6411 32.2675 12.5214 30.8391 13.1499 29.1627C13.6403 27.8737 14.2481 26.632 14.9658 25.4529C9.52821 28.27 0 34.7771 0 34.7771C2.72546 34.6137 5.46016 34.6933 8.17132 35.0151C13.4093 35.5409 13.1599 39.6474 13.1599 39.6474C15.0022 39.1425 16.8798 38.7745 18.7771 38.5464C20.8922 38.4075 21.0419 40.6493 21.0419 40.6493L21.5707 44.4781C22.3736 43.6145 23.2591 42.8305 24.2146 42.1372C25.4463 41.157 27.0145 40.6942 28.5846 40.8477L25.8708 27.774Z" fill="#F06351"/>
   </svg>
-
     <svg xmlns="http://www.w3.org/2000/svg" width="118" height="21" viewBox="0 0 118 21" fill="none">
       <path d="M1.42351 19.2159C0.391283 17.7277 -0.102273 15.9474 0.0207226 14.156V6.84405C-0.109487 5.03944 0.376607 3.24353 1.40346 1.73542C2.33197 0.572011 3.91845 -0.00644536 6.16291 5.41628e-05C8.40736 0.00655368 9.92704 0.516766 10.722 1.53069C11.6912 2.78717 12.1642 4.3407 12.0546 5.90812V7.62399H7.90636V5.76188C7.90077 5.27192 7.85723 4.78307 7.77611 4.29949C7.72595 3.9494 7.56075 3.6245 7.30517 3.3733C7.1474 3.24166 6.96423 3.14195 6.76637 3.08001C6.56852 3.01807 6.35995 2.99515 6.15288 3.01258C5.8555 2.9694 5.55167 3.01643 5.28273 3.14726C5.0138 3.2781 4.79283 3.48638 4.6499 3.74378C4.38644 4.42844 4.27049 5.15851 4.30923 5.88862V15.1699C4.26352 15.9049 4.39743 16.6399 4.7 17.3148C4.84457 17.5582 5.05909 17.7553 5.31721 17.8817C5.57533 18.0082 5.86578 18.0585 6.15288 18.0265C6.435 18.0653 6.72251 18.0164 6.97441 17.8869C7.22631 17.7573 7.42973 17.5537 7.55567 17.305C7.79804 16.6191 7.90347 15.8944 7.86628 15.1699V13.2201H12.0145V14.9067C12.1366 16.4972 11.7023 18.0812 10.7821 19.4011C9.90032 20.4735 8.3773 21 6.21301 21C4.04871 21 2.35536 20.415 1.42351 19.2159Z" fill="#111111"/>
       <path d="M17.7065 0.282784H22.4559L26.4638 20.7563H22.516L21.8046 16.2326H18.478L17.6764 20.727H13.6685L17.7065 0.282784ZM21.3637 13.6588L20.1012 5.4304L18.8487 13.6588H21.3637Z" fill="#111111"/>
@@ -56,97 +56,92 @@
 </nav>
 </header>
 <main class="main-container">
-<section class="container-header">
-  <h1 class="container-header__title">Функциональное питание для котов</h1>
-  <p class="container-header__paragraph">Занялся собой? Займись котом!</p>
-  <button class="container-header__button" type="button">Подобрать программу</button>
-</section>
+  <div class="main-container__section">
+    <form class="info-form">
+      <fieldset>
+  <h1 class="main-container__title">Подбор программы</h1>
+  <p class="main-container__paragraph">Заполните анкету, и мы подберем программу питания для вашего кота</p>
 
-<section class="catalog-section">
-<ul class="catalog-list">
-<li class="catalog-item">
-      <svg xmlns="http://www.w3.org/2000/svg" width="70" height="97" viewBox="0 0 70 97" fill="none">
-      <g clip-path="url(#clip0_94552_4002)"><path d="M54.84 0H54.46C53.818 0.362938 53.307 0.919413 53 1.59C52.4377 2.67211 52.0047 3.81665 51.71 5C51.6468 5.35582 51.4671 5.68054 51.1992 5.92311C50.9313 6.16567 50.5903 6.31232 50.23 6.34C49.1279 6.52999 48.0837 6.96931 47.1773 7.62443C46.2709 8.27955 45.5262 9.13313 45 10.12C44.2766 11.4013 43.6579 12.739 43.15 14.12C41.73 17.8 40.64 21.6 39.3 25.31C38.67 27 38.64 27 36.74 27C34.47 27 34.63 26.65 34.6 29.15C34.6 29.94 34.84 30.34 35.68 30.3C35.94 30.3 36.33 30.17 36.43 30.51C36.53 30.85 36.19 31 35.99 31.2C34.8043 32.4036 33.3037 33.2492 31.66 33.64C29.76 34.15 27.82 34.55 25.97 35.17C21.22 36.76 16.83 38.98 13.41 42.74C11.4103 45.0754 9.80885 47.7242 8.67 50.58C5 59.22 3.22 68.32 1.84 77.51C1.19 81.82 0.73 86.15 0.38 90.51C0.2 92.65 0 94.82 0 97H33.33C33.3853 96.5599 33.3051 96.1133 33.1 95.72C32.7794 94.9221 32.2586 94.2204 31.5877 93.6827C30.9167 93.1449 30.1185 92.7892 29.27 92.65C28.57 92.49 28.49 92.28 28.92 91.73C29.6214 90.7939 30.159 89.7458 30.51 88.63C32.14 83.82 32.77 78.8 33.56 73.83C34.0063 70.0338 35.1739 66.3579 37 63C38.4244 60.5284 40.3243 58.3634 42.59 56.63C43.42 56 43.45 56 43.59 57.07C43.69 57.78 43.71 58.51 43.76 59.23C44.0601 63.9544 43.9999 68.6948 43.58 73.41C43.2024 77.0649 43.1522 80.7462 43.43 84.41C43.8275 88.6636 44.5869 92.8755 45.7 97H59C58.8264 95.9175 58.328 94.9132 57.5708 94.1203C56.8136 93.3274 55.8334 92.7833 54.76 92.56C53.5066 92.3608 52.2252 92.429 51 92.76C50.4 92.9 50.15 92.76 50.1 92.11C49.6863 86.8159 50.0229 81.4899 51.1 76.29C52.4338 70.287 53.4552 64.2189 54.16 58.11C54.4224 55.643 55.1992 53.2584 56.44 51.11C57.63 48.99 58.67 46.79 59.84 44.66C60.3045 43.8855 60.5841 43.0143 60.657 42.1141C60.7298 41.2139 60.594 40.3091 60.26 39.47C59.99 38.76 59.73 38.04 59.4 37.36C58.4 35.41 57.4 33.48 56.48 31.51C55.99 30.51 56.1 30.39 57.19 30.36C58.82 30.36 58.82 30.36 58.85 28.72C58.85 28.5 58.85 28.28 58.85 28.06C58.85 27.37 58.59 26.99 57.85 27.06C57.35 27.06 56.85 27.06 56.33 27.06C55.64 27.06 55.44 26.77 55.61 26.06C55.9473 24.9058 56.611 23.8737 57.5211 23.0877C58.4312 22.3018 59.549 21.7956 60.74 21.63C62.9557 21.4379 65.1878 21.5829 67.36 22.06C67.6107 22.139 67.8823 22.1161 68.1162 21.9963C68.3502 21.8766 68.5275 21.6695 68.61 21.42C69.01 20.42 69.45 19.42 69.9 18.42C70.002 18.2426 70.0471 18.0381 70.0292 17.8343C70.0113 17.6304 69.9313 17.437 69.8 17.28C66.6 13.22 63.13 9.43 58.4 7C58.1715 6.90163 57.9712 6.7476 57.8175 6.55196C57.6638 6.35633 57.5615 6.12531 57.52 5.88C57.2523 4.45051 56.8264 3.05525 56.25 1.72C55.9795 1.00861 55.4845 0.404782 54.84 0V0Z" fill="black"/>
-      </g><defs> <clipPath id="clip0_94552_4002"> <rect width="70" height="97" fill="white"/></clipPath> </defs>
-    </svg>
-  <h3 class="catalog-title">Похудение</h3>
-  <p class="catalog-paragraph">Ваш кот весит больше собаки и почти утратил способность
-    лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-    <a class="catalog-link"><p class="catalog-button">Каталог slim</p></a>
-  </li>
+  <div class="info-section">
 
-<li class="catalog-item">
-      <svg xmlns="http://www.w3.org/2000/svg" width="134" height="56" viewBox="0 0 134 56" fill="none">
-      <g clip-path="url(#clip0_94552_4021)"> <path d="M123.118 5.75685C124.273 3.91994 125.807 2.35146 127.618 1.15685C128.618 0.456854 129.218 0.456854 129.818 1.75685C130.618 3.65685 131.318 5.65685 130.718 7.75685C130.609 8.11302 130.588 8.49045 130.658 8.85639C130.728 9.22234 130.886 9.56575 131.118 9.85685C131.718 10.6569 132.218 11.4569 132.718 12.1569C133.399 13.0206 133.84 14.0482 133.998 15.1364C134.156 16.2246 134.025 17.3352 133.618 18.3569C133.251 19.3487 133.182 20.4261 133.418 21.4569C133.618 22.4469 133.618 23.4668 133.418 24.4569C133.337 25.1983 133.037 25.8987 132.556 26.4688C132.075 27.0388 131.435 27.4524 130.718 27.6569C129.439 27.9002 128.298 28.6137 127.518 29.6569C127.424 29.8105 127.291 29.9372 127.134 30.0247C126.976 30.1123 126.799 30.1578 126.618 30.1569C125.418 30.3569 122.418 27.6569 122.418 26.4569V25.8569C122.518 22.2569 122.318 21.9569 119.018 20.4569C118.328 20.2133 117.709 19.8007 117.218 19.2569C116.618 18.4569 115.818 18.5569 114.918 18.8569C114.018 19.1569 113.518 19.7569 113.618 20.7569C113.92 23.1777 114.02 25.6194 113.918 28.0569C113.925 28.335 113.993 28.6083 114.118 28.8569C117.218 33.3569 118.418 38.6569 119.918 43.7569C121.118 47.6569 123.318 49.7569 127.318 50.0569C127.958 50.1079 128.594 50.2082 129.218 50.3569C130.04 50.4889 130.803 50.8644 131.41 51.4349C132.016 52.0054 132.437 52.7445 132.618 53.5569C133.318 55.6569 132.918 56.1569 130.818 56.1569H124.318C123.477 56.1994 122.652 55.9124 122.018 55.3569C121.006 54.5027 119.856 53.8265 118.618 53.3569C117.249 52.8516 116.065 51.9455 115.218 50.7569C114.047 49.1203 112.706 47.612 111.218 46.2569C108.418 43.3569 105.418 40.5569 102.818 37.5569C100.839 35.5127 99.6973 32.8012 99.6182 29.9569C99.6182 29.0569 99.4182 28.6569 98.4182 29.0569C98.1188 29.2468 97.7728 29.3506 97.4182 29.3569C94.6182 29.3569 93.2182 31.0569 92.2182 33.5569C91.3182 35.6569 90.1182 37.6569 89.0182 39.7569C88.3945 41.0714 88.0538 42.5023 88.0182 43.9569C88.0182 46.3569 88.6182 47.1569 90.8182 47.9569C92.2182 48.4569 93.5182 48.9569 94.2182 50.3569C95.0182 51.9569 94.8182 52.3569 93.1182 52.4569H86.3182C85.9262 52.4957 85.5319 52.4104 85.191 52.213C84.8501 52.0156 84.5798 51.7162 84.4182 51.3569L82.6182 48.3569C82.0876 47.5741 81.7479 46.6779 81.6264 45.7401C81.5048 44.8023 81.6048 43.849 81.9182 42.9569C82.351 41.2204 82.3852 39.4084 82.0182 37.6569C81.7662 36.437 81.7879 35.1764 82.0819 33.9659C82.3758 32.7554 82.9347 31.6252 83.7182 30.6569C84.3182 29.9569 84.3182 29.6569 83.3182 29.4569C79.2291 28.5882 75.2649 27.2108 71.5182 25.3569C71.4917 25.3569 71.4663 25.3463 71.4475 25.3276C71.4288 25.3088 71.4182 25.2834 71.4182 25.2569C68.2182 24.0569 67.6182 24.2569 66.7182 27.5569C65.9182 30.3569 65.1182 33.1569 64.5182 36.0569C63.8182 39.2569 64.6182 42.2569 65.6182 45.2569C66.0182 46.4569 67.2182 46.3569 68.1182 46.6569C70.1182 47.2569 71.8182 48.0569 72.6182 50.1569C73.3182 51.7569 73.2182 51.9569 71.5182 51.9569C69.8182 51.9569 68.1182 51.8569 66.3182 51.9569C64.7993 51.9844 63.3169 51.4902 62.1182 50.5569C57.3182 47.3569 55.9182 42.4569 55.5182 37.1569C55.3182 33.8569 53.5182 31.2569 51.4182 28.7569C51.0182 28.2569 50.6182 28.0569 50.0182 28.4569C47.8717 29.6404 45.6307 30.6439 43.3182 31.4569C38.4925 33.1608 34.2579 36.2153 31.1182 40.2569C29.9459 41.7318 29.1866 43.4919 28.9182 45.3569C28.6182 47.1569 29.1182 47.9569 30.9182 48.4569C32.7182 48.9569 33.6182 49.9569 33.8182 51.8569C33.9182 52.6569 33.6182 53.0569 32.8182 53.0569H24.7182C24.4531 53.0381 24.1965 52.9555 23.9702 52.8162C23.7438 52.6769 23.5545 52.485 23.4182 52.2569C22.1621 50.7016 21.4899 48.7558 21.5182 46.7569C21.4658 43.3018 21.7673 39.8505 22.4182 36.4569C22.5517 35.4405 22.9311 34.4721 23.5236 33.6357C24.1161 32.7992 24.9038 32.12 25.8182 31.6569C31.7182 28.8569 34.8182 23.5569 37.6182 18.0569C38.2182 16.9569 37.7182 16.7569 36.7182 16.8569C33.9196 17.2454 31.2679 18.3474 29.0182 20.0569C26.0724 22.2057 23.2975 24.5795 20.7182 27.1569C17.9679 29.9505 14.3209 31.6855 10.4182 32.0569C3.11823 32.4569 -0.28177 28.3569 0.0182299 21.7569C0.0852924 19.5065 0.933877 17.3496 2.41823 15.6569C2.93425 14.9879 3.63796 14.4878 4.4395 14.2207C5.24103 13.9535 6.10401 13.9313 6.91823 14.1569C8.41823 14.5569 8.81823 15.3569 8.21823 16.8569C7.91823 17.4569 7.51823 17.9569 7.21823 18.5569C6.78683 19.1698 6.44975 19.844 6.21823 20.5569C5.11823 23.5569 6.61823 25.6569 9.71823 25.9569C13.0182 26.2569 15.7182 24.8569 18.2182 22.8569C21.2302 20.4451 23.9189 17.6555 26.2182 14.5569C27.9375 12.2943 30.1023 10.4081 32.5791 9.01498C35.0558 7.62182 37.7918 6.75118 40.6182 6.45685C42.9182 6.15685 44.9182 5.15685 47.1182 4.55685C51.2327 3.30246 55.5172 2.69521 59.8182 2.75685C61.8103 2.83982 63.7948 2.46345 65.6182 1.65685C70.5182 -0.343146 75.6182 -0.343146 80.7182 0.656854C84.7182 1.45685 88.7182 2.45685 92.6182 3.45685C94.9392 3.88933 97.3257 3.82114 99.6182 3.25685C104.007 2.14439 108.496 1.47438 113.018 1.25685C115.981 1.11272 118.933 1.69639 121.618 2.95685C123.618 3.85685 123.618 3.85685 123.118 5.75685Z" fill="black"/>
-      </g><defs> <clipPath id="clip0_94552_4021"> <rect width="134" height="56" fill="white"/> </clipPath> </defs> </svg>
-  <h3 class="catalog-title">набор массы</h3>
-  <p class="catalog-paragraph">Заработать авторитет среди дворовых котов и даже собак?
-    Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-    <a class="catalog-link"><p class="catalog-button">Каталог pro</p></a>
-  </li>
-</ul>
-</section>
+    <label class="info-label" for="name">Имя:*</label>
+    <input class="info-input" type="text" id="name" placeholder="Барсик">
+    <label class="info-label" for="weight">Вес (кг):*</label>
+    <input class="info-input" type="number" id="weight" min="0" max="500" placeholder="7">
+    <label class="info-label" for="age">Возраст (лет):</label>
+    <input class="info-input" type="number" id="age" min="0" max="70" placeholder="7">
 
-<section class="advantages-section">
-  <h2 class="visually-hidden">Наши преимущества</h2>
-  <h2 class="advantages-title">Как это работает</h2>
-  <ul class="advantages-list">
-  <li class="advantages-item">
-  <span class="advantages-background">1</span>
-  <img class="advantages-image" src="img/leaf.png" alt="Лист дерева" width="25" height="28">
-  <p class="advantages-paragraph">Функциональное питание содержит только полезные питательные вещества.</p>
-  </li>
+<div class="info-form info-form__radio">
 
-<li  class="advantages-item">
-  <span class="advantages-background">2</span>
-  <img class="advantages-image" src="img/powder.png" alt="Порошок" width="26" height="29">
-  <p class="advantages-paragraph">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
-  </li>
+  <input class="info-input" type="radio" id="weight-loss" name="diet" checked>
+  <label class="info-label" for="weight-loss">Похудение</label><br>
+  <input class="info-input" type="radio" id="weight-gain" name="diet">
+  <label class="info-label" for="weight-gain">Набор массы</label><br>
+  <input class="info-input" type="radio" id="idk" name="diet">
+  <label class="info-label" for="idk">Не знаю (Нужен ваш совет)</label>
+</div>
 
-<li class="advantages-item">
-  <span class="advantages-background">3</span>
-  <img class="advantages-image" src="img/icon_eat.png" alt="Вилка и нож" width="25" height="30">
-  <p class="advantages-paragraph">Замените один-два приема обычной еды на наше функциональное питание.</p>
-</li>
+</div>
+</fieldset>
+</form>
+</div>
 
-<li class="advantages-item">
-  <span class="advantages-background">4</span>
-  <img class="advantages-image" src="img/watch.png" alt="Часы"  width="26" height="31">
-  <p class="advantages-paragraph">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
-</li>
-</ul>
-</section>
+<div class="contacts-section">
+  <form class="contact-form">
+  <fieldset>
+    <legend class="contact-title">Контактные данные (владельца кота)</legend>
+  <label class="contact-label" for="email">E-mail:*</label>
+    <input class="contact-input" type="email" id="email" name="кuklachev@gmail.com">
+    <label class="contact-label"  for="number">Телефон:*</label>
+    <input class="contact-input" type="number" id="number" name="8 (960) 900-60-90">
+    </fieldset>
+  </form>
+</div>
 
-<section class="aside">
-<h2 class="aside-title">Живой пример</h2>
-<div class="aside-wrapper">
-  <p class="aside-paragraph">Борис сбросил 5 кг за 2 месяца, просто заменив свой
-    обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих
-    привычек и по-прежнему спит по 16 часов в день. </p>\
-      <p class="aside-text">Снижение веса</p>
-      <span class="aside-span">5 КГ</span>
-      <p class="aside-text">Затрачено времени</p>
-      <span class="aside-span">60 ДНЕЙ</span>
-    <p class="aside-text">Затраты на питание: </p>
-    <span class="aside-span">15 000 РУБ.</span>
-  </div>
-<img class="aside__image" src="img/slides.jpg" alt="Сравнение толстого и худого Бориса" width="560" height="512">
-</section>
+<div class="comments-section">
+  <form class="contact-form">
+    <fieldset>
+      <legend class="comments-title">Комментарий</legend>
+    <input class="comments-input" type="text" id="comment" name="Расскажите обо всех повадках кота">
+</fieldset>
+</form>
+</div>
+
+<div class="additional-section">
+    <form class="additional-form">
+    <fieldset>
+      <legend class="additional-title">Дополнительно</legend>
+    <input class="additional-input" type="checkbox" id="sugar" name="sugar" checked>
+    <label class="additional-label" for="sugar"> Сахарозаменитель</label>
+    <input class="additional-input" type="checkbox" id="water" name="water">
+    <label class="additional-label" for="water"> Питьевая вода</label>
+    <input class="additional-input" type="checkbox" id="milk" name="milk">
+    <label class="additional-label" for="milk"> Молоко</label>
+    <input class="additional-input" type="checkbox" id="vitamins" name="vitamins">
+    <label class="additional-label" for="vitamins"> Витамины</label>
+    <input class="additional-input additional-button" type="submit" value="Отправить заявку">
+  </fieldset>
+  </form>
+  <p class="additional-text">* — Обязательные поля</p>
+</div>
 </main>
 
+
 <footer class="main-footer">
+  <div class="footer-top">
   <img class="map__footer" src="img/map.png" alt="Карта" width="1440" height="400">
-  <section class="footer-top">
-    <div class="wrapper-footer">
+      <div class="wrapper-footer">
       <h3 class="title-footer">Приглашаем к сотрудничеству дилеров!</h3>
         <div class="address-footer__wrapper">
           <address class="address-footer">ул. Большая Конюшенная, д. 19/8</address>
           <address class="address-footer">Санкт-Петербург</address>
         </div>
     </div>
-  </section>
+  </div>
   <div class="footer-bottom">
+    <div class="container">
    <a class="logo__footer" href="index.html">
+
     <svg xmlns="http://www.w3.org/2000/svg" width="118" height="21" viewBox="0 0 118 21" fill="none">
       <path d="M1.42351 19.2159C0.391283 17.7277 -0.102273 15.9474 0.0207226 14.156V6.84405C-0.109487 5.03944 0.376607 3.24353 1.40346 1.73542C2.33197 0.572011 3.91845 -0.00644536 6.16291 5.41628e-05C8.40736 0.00655368 9.92704 0.516766 10.722 1.53069C11.6912 2.78717 12.1642 4.3407 12.0546 5.90812V7.62399H7.90636V5.76188C7.90077 5.27192 7.85723 4.78307 7.77611 4.29949C7.72595 3.9494 7.56075 3.6245 7.30517 3.3733C7.1474 3.24166 6.96423 3.14195 6.76637 3.08001C6.56852 3.01807 6.35995 2.99515 6.15288 3.01258C5.8555 2.9694 5.55167 3.01643 5.28273 3.14726C5.0138 3.2781 4.79283 3.48638 4.6499 3.74378C4.38644 4.42844 4.27049 5.15851 4.30923 5.88862V15.1699C4.26352 15.9049 4.39743 16.6399 4.7 17.3148C4.84457 17.5582 5.05909 17.7553 5.31721 17.8817C5.57533 18.0082 5.86578 18.0585 6.15288 18.0265C6.435 18.0653 6.72251 18.0164 6.97441 17.8869C7.22631 17.7573 7.42973 17.5537 7.55567 17.305C7.79804 16.6191 7.90347 15.8944 7.86628 15.1699V13.2201H12.0145V14.9067C12.1366 16.4972 11.7023 18.0812 10.7821 19.4011C9.90032 20.4735 8.3773 21 6.21301 21C4.04871 21 2.35536 20.415 1.42351 19.2159Z" fill="#111111"/>
       <path d="M17.7065 0.282784H22.4559L26.4638 20.7563H22.516L21.8046 16.2326H18.478L17.6764 20.727H13.6685L17.7065 0.282784ZM21.3637 13.6588L20.1012 5.4304L18.8487 13.6588H21.3637Z" fill="#111111"/>
@@ -170,9 +165,10 @@
 
   <div class="main-footer__htmlacademy">
     <a class="main-footer__link" href="htmlacademy.ru">
-    <p class="main-footer__text">HTML Academy</p>
+    <span class="main-footer__text">HTML Academy</span>
     <img class="main-footer__image" src="img/лого_html_academy.png" alt="Логотип Html Academy" width="27" height="34">
   </a>
+  </div>
 </div>
 </div>
 </footer>
