Создаёт базовую стилизацию с помощью препроцессора

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -237,27 +237,32 @@
       <img class="footer__map" src="images/map-mobile@1x.png" srcset="images/map-mobile@2x.png 2x" width="320"
         height="362" alt="Карта">
     </picture>
-    <section class="footer__top">
-      <div class="footer__wrapper">
-        <h3 class="footer__title">Приглашаем к сотрудничеству дилеров!</h3>
-        <address class="footer__address-wrapper">
-          <span class="footer__address">ул. Большая Конюшенная, д. 19/8</span>
-          <span class="footer__city">Санкт-Петербург</span>
+    <section class="footer__top footer-top">
+      <div class="footer-top__wrapper">
+        <h3 class="footer-top__title">Приглашаем к сотрудничеству дилеров!</h3>
+        <address class="footer-top__address-wrapper">
+          <span class="footer-top__address">ул. Большая Конюшенная, д. 19/8</span>
+          <span class="footer-top__city">Санкт-Петербург</span>
         </address>
       </div>
     </section>
-    <div class="footer__bottom">
-      <div class="footer__social social">
+    <div class="footer__bottom footer-bottom">
+      <div class="footer-bottom__social social">
         <ul class="social__list">
-          <li class="social__item"><a href="vk.com"><img src="img/vk.png" alt="В контакте" width="27" height="17"></a>
+          <li class="social__item">
+            <a href="vk.com">
+              <p>/</p>
+            </a>
           </li>
-          <li class="social__item"><a href="youtube.com"><img src="img/youtube.png" alt="Youtube" width="24"
-                height="19"></a></li>
-          <li class="social__item"><a href="telegram.com"><img src="img/telegram.png" alt="Телеграм" width="20"
-                height="18"></a></li>
+          <li class="social__item"><a href="youtube.com">
+              <p>/</p>
+            </a></li>
+          <li class="social__item"><a href="telegram.com">
+              <p>/</p>
+            </a></li>
         </ul>
       </div>
-      <div class="footer__htmlacademy htmlacademy">
+      <div class="footer-bottom__htmlacademy htmlacademy">
         <a class="htmlacademy__link" href="htmlacademy.ru">
           <p class="htmlacademy__text">HTML Academy</p>
         </a>
