--- a/source/index.html
+++ b/source/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" href="favicons/32.svg">
   <link rel="icon" href="favicons/32.svg" type="image/svg+xml">
   <link rel="manifest" href="manifest.webmanifest">
+  <link rel="stylesheet" href="styles/styles.css">
   <title>HTML Academy: Кэт энерджи</title>
 </head>
 
@@ -35,27 +36,27 @@
           srcset="images/index-can-desktop@1x.png 1x, images/index-can-desktop@2x.png  2x">
         <source type="image/png" media="(min-width: 768px)" width="709" height="609"
           srcset="images/index-can-tablet@1x.png 1x, images/index-can-tablet@2x.png  2x">
-        <img src="images/index-can-mobile@1x.png" srcset="images/index-can-mobile@2x.png 2x" width="280" height="270"
+        <img class="header__image" src="images/index-can-mobile@1x.png" srcset="images/index-can-mobile@2x.png 2x" width="280" height="270"
           alt="Корм Cat Energy">
       </picture>
       <button class="header__button" type="button">Подобрать программу</button>
     </section>
-    <section class="main__catalog catalog">
-      <ul class="catalog__list">
-        <li class="catalog__item">
-          <h3 class="catalog__title">Похудение</h3>
-          <p class="catalog__paragraph">Ваш кот весит больше собаки и почти утратил способность
+    <section class="main__option option">
+      <ul class="option__list">
+        <li class="option__item">
+          <h3 class="option__title">Похудение</h3>
+          <p class="option__paragraph">Ваш кот весит больше собаки и почти утратил способность
             лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-          <a class="catalog__button-link" href="#">
-            <p class="catalog-button">Каталог slim</p>
+          <a class="option__button-link" href="#">
+            <p class="option-button">Каталог slim</p>
           </a>
         </li>
-        <li class="catalog__item">
-          <h3 class="catalog__title">Набор массы</h3>
-          <p class="catalog__paragraph">Заработать авторитет среди дворовых котов и даже собак?
+        <li class="option__item">
+          <h3 class="option__title">Набор массы</h3>
+          <p class="option__paragraph">Заработать авторитет среди дворовых котов и даже собак?
             Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-          <a class="catalog__button-link" href="#">
-            <p class="catalog__button">Каталог pro</p>
+          <a class="option__button-link" href="#">
+            <p class="option__button">Каталог pro</p>
           </a>
         </li>
       </ul>
@@ -117,17 +118,17 @@
       <img class="footer__map" src="images/map-mobile@1x.png" srcset="images/map-mobile@2x.png 2x" width="320"
         height="362" alt="Карта">
     </picture>
-    <section class="footer__top">
-      <div class="footer__wrapper">
-        <h3 class="footer__title">Приглашаем к сотрудничеству дилеров!</h3>
-        <address class="footer__address-wrapper">
-          <span class="footer__address">ул. Большая Конюшенная, д. 19/8</span>
-          <span class="footer__city">Санкт-Петербург</span>
+    <section class="footer__top footer-top">
+      <div class="footer-top__wrapper">
+        <h3 class="footer-top__title">Приглашаем к сотрудничеству дилеров!</h3>
+        <address class="footer-top__address-wrapper">
+          <span class="footer-top__address">ул. Большая Конюшенная, д. 19/8</span>
+          <span class="footer-top__city">Санкт-Петербург</span>
         </address>
       </div>
     </section>
-    <div class="footer__bottom">
-      <div class="footer__social social">
+    <div class="footer__bottom footer-bottom">
+      <div class="footer-bottom__social social">
         <ul class="social__list">
           <li class="social__item">
             <a href="vk.com">
@@ -142,7 +143,7 @@
             </a></li>
         </ul>
       </div>
-      <div class="footer__htmlacademy htmlacademy">
+      <div class="footer-bottom__htmlacademy htmlacademy">
         <a class="htmlacademy__link" href="htmlacademy.ru">
           <p class="htmlacademy__text">HTML Academy</p>
         </a>
