--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="favicons/32.svg">
   <link rel="icon" href="favicons/32.svg" type="image/svg+xml">
   <link rel="manifest" href="manifest.webmanifest">
-  <link rel="stylesheet" href="styles/styles.css">
+  <link rel="stylesheet" href="/build/styles/styles.css">
   <title>HTML Academy: Кэт энерджи</title>
 </head>
 
