--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="favicons/32.svg">
   <link rel="icon" href="favicons/32.svg" type="image/svg+xml">
   <link rel="manifest" href="manifest.webmanifest">
-  <link rel="stylesheet" href="/build/styles/styles.css">
+  <link rel="stylesheet" href="./styles/styles.css">
   <title>HTML Academy: Кэт энерджи</title>
 </head>
 
@@ -119,7 +119,7 @@
         height="362" alt="Карта">
     </picture>
     <section class="footer__top footer-top">
-      <div class="footer-top__wrapper">
+      <div class="footer-top__wrapper footer__top-index">
         <h3 class="footer-top__title">Приглашаем к сотрудничеству дилеров!</h3>
         <address class="footer-top__address-wrapper">
           <span class="footer-top__address">ул. Большая Конюшенная, д. 19/8</span>
