Исправляет стили для мобильной версии

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -190,7 +190,7 @@
               <tr class="additional-catalog__table-row">
                 <th class="additional-catalog__table-title">Сахарозаменитель</th>
                 <td class="additional-catalog__table-cell">1 упаковка (100 г)</td>
-                <td class="additional-catalog__table-cell">200 ₽</td>
+                <td class="additional-catalog__table-cell additional-catalog__table-price">200 ₽</td>
                 <td class="additional-catalog__table-cell">
                   <button class="additional-catalog__button-order" type="button">Заказать</button>
                 </td>
@@ -198,7 +198,7 @@
               <tr class="additional-catalog__table-row">
                 <th class="additional-catalog__table-title">Питьевая вода</th>
                 <td class="additional-catalog__table-cell">5 литров</td>
-                <td class="additional-catalog__table-cell">50 ₽</td>
+                <td class="additional-catalog__table-cell additional-catalog__table-price">50 ₽</td>
                 <td class="additional-catalog__table-cell">
                   <button class="additional-catalog__button-order" type="button">Заказать</button>
                 </td>
@@ -206,7 +206,7 @@
               <tr class="additional-catalog__table-row">
                 <th class="additional-catalog__table-title">Молоко</th>
                 <td class="additional-catalog__table-cell">1 литр</td>
-                <td class="additional-catalog__table-cell">100 ₽</td>
+                <td class="additional-catalog__table-cell additional-catalog__table-price">100 ₽</td>
                 <td class="additional-catalog__table-cell">
                   <button class="additional-catalog__button-order" type="button">Заказать</button>
                 </td>
@@ -214,7 +214,7 @@
               <tr class="additional-catalog__table-row">
                 <th class="additional-catalog__table-title">Витамины</th>
                 <td class="additional-catalog__table-cell">1 упаковка (30 г)</td>
-                <td class="additional-catalog__table-cell">300 ₽</td>
+                <td class="additional-catalog__table-cell additional-catalog__table-price">300 ₽</td>
                 <td class="additional-catalog__table-cell">
                   <button class="additional-catalog__button-order" type="button">Заказать</button>
                 </td>
