--- a/source/index.html
+++ b/source/index.html
@@ -96,8 +96,8 @@
         <span class="aside__span">5 КГ</span>
         <p class="aside__text">Затрачено времени</p>
         <span class="aside__span">60 ДНЕЙ</span>
-        <p class="aside__text">Затраты на питание:</p>
-        <span class="aside__span">15 000 РУБ.</span>
+        <p class="aside__text aside__uppercase">Затраты на питание:</p>
+        <span class="aside__span aside__uppercase">15 000 РУБ.</span>
       </div>
       <picture>
         <source type="image/png" media="(min-width: 1440px)" width="1440" height="400"
