--- a/source/index.html
+++ b/source/index.html
@@ -27,6 +27,9 @@
       </div>
     </nav>
   </header>
+  <svg class="user-list__login-icon" width="16" height="16">
+    <use href="#icon-login"></use>
+  </svg>
   <main class="main">
     <section class="main__header header">
       <h1 class="header__title">Функциональное питание для котов</h1>
@@ -44,19 +47,37 @@
     <section class="main__option option">
       <ul class="option__list">
         <li class="option__item">
+          <picture>
+            <source media="(min-width: 1440px)" width="70" height="97" srcset="images/option_cat_slim.svg" type="image/svg+xml">
+            <source media="(min-width: 768px)" width="140" height="194" srcset="images/option_cat_slim.svg" type="image/svg+xml">
+            <img src="images/option_cat_slim.svg" width="36" height="50" alt="Кот худеет">
+          </picture>
           <h3 class="option__title">Похудение</h3>
           <p class="option__paragraph">Ваш кот весит больше собаки и почти утратил способность
             лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
           <a class="option__button-link" href="#">
             <p class="option-button">Каталог slim</p>
+            <svg width="32" height="12" viewBox="0 0 32 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <line y1="6" x2="18" y2="6" stroke="black" stroke-width="2"/>
+              <path d="M24 6L17.25 11.1962L17.25 0.803848L24 6Z" fill="black"/>
+              </svg>
           </a>
         </li>
         <li class="option__item">
+          <picture>
+            <source media="(min-width: 1440px)" width="134" height="56" srcset="images/option_cat_sport.svg" type="image/svg+xml">
+            <source media="(min-width: 768px)" width="268" height="112" srcset="images/option_cat_sport.svg" type="image/svg+xml">
+            <img src="images/option_cat_sport.svg" width="67" height="28" alt="Кот набирает массу">
+          </picture>
           <h3 class="option__title">Набор массы</h3>
           <p class="option__paragraph">Заработать авторитет среди дворовых котов и даже собак?
             Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
           <a class="option__button-link" href="#">
             <p class="option__button">Каталог pro</p>
+            <svg width="32" height="12" viewBox="0 0 32 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <line y1="6" x2="18" y2="6" stroke="black" stroke-width="2"/>
+              <path d="M24 6L17.25 11.1962L17.25 0.803848L24 6Z" fill="black"/>
+              </svg>
           </a>
         </li>
       </ul>
@@ -66,22 +87,31 @@
       <h2 class="advantages__title">Как это работает</h2>
       <ul class="advantages__list">
         <li class="advantages__item">
-          <img class="advantages__image" src="img/leaf.png" alt="Лист дерева" width="25" height="28">
+          <span class="advantages__background">1</span>
+          <svg class="advantages__image" width="26" height="31">
+            <use href="images/icons/stack.svg#advantages1"></use>
+          </svg>
           <p class="advantages__paragraph">Функциональное питание содержит только полезные питательные вещества.</p>
         </li>
         <li class="advantages__item">
           <span class="advantages__background">2</span>
-          <img class="advantages__image" src="img/powder.png" alt="Порошок" width="26" height="29">
+          <svg class="advantages__image" width="26" height="31">
+            <use href="images/icons/stack.svg#advantages2"></use>
+          </svg>
           <p class="advantages__paragraph">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
         </li>
         <li class="advantages__item">
           <span class="advantages__background">3</span>
-          <img class="advantages__image" src="img/icon_eat.png" alt="Вилка и нож" width="25" height="30">
+          <svg class="advantages__image" width="26" height="31">
+            <use href="images/icons/stack.svg#advantages3"></use>
+          </svg>
           <p class="advantages__paragraph">Замените один-два приема обычной еды на наше функциональное питание.</p>
         </li>
         <li class="advantages__item">
           <span class="advantages__background">4</span>
-          <img class="advantages__image" src="img/watch.png" alt="Часы" width="26" height="31">
+          <svg class="advantages__image" width="26" height="31">
+            <use href="images/icons/stack.svg#advantages4"></use>
+          </svg>
           <p class="advantages__paragraph">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
         </li>
       </ul>
@@ -91,7 +121,7 @@
       <div class="aside__wrapper">
         <p class="aside__paragraph">Борис сбросил 5 кг за 2 месяца, просто заменив свой
           обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих
-          привычек и по-прежнему спит по 16 часов в день.</p>\
+          привычек и по-прежнему спит по 16 часов в день.</p>
         <p class="aside__text">Снижение веса</p>
         <span class="aside__span">5 КГ</span>
         <p class="aside__text">Затрачено времени</p>
@@ -100,25 +130,17 @@
         <span class="aside__span aside__uppercase">15 000 РУБ.</span>
       </div>
       <picture>
-        <source type="image/png" media="(min-width: 1440px)" width="1440" height="400"
-          srcset="images/slides-cat-desktop@1x 1x, images/slides-cat-desktop@2x.jpg 2x">
-        <source type="image/png" media="(min-width: 768px)" width="768" height="400"
-          srcset="images/slides-cat-tablet@1x.jpg 1x, images/slides-cat-tablet@2x.jpg 2x">
-        <img class="aside__image" src="images/slides-cat-mobile@1x.jpg" srcset="index-cat-mobile@2x.jpg 2x"
-          width="560" height="512" alt="Сравнение толстого и худого кота">
+        <source type="image/png" media="(min-width: 1440px)" width="560" height="512"
+          srcset="images/slides-cat-desktop@1x.png 1x, images/slides-cat-desktop@2x.png 2x">
+        <source type="image/png" media="(min-width: 768px)" width="560" height="512"
+          srcset="images/slides-cat-tablet@1x.png 1x, images/slides-cat-tablet@2x.png 2x">
+        <img class="aside__image" src="images/slides-cat-mobile@1x.png" srcset="images/slides-cat-mobile@2x.png 2x"
+          width="280" height="256" alt="Сравнение толстого и худого кота">
       </picture>
     </section>
   </main>
   <footer class="footer">
-    <picture>
-      <source type="image/png" media="(min-width: 1440px)" width="1440" height="400"
-        srcset="images/map-desktop@1x.png 1x, images/map-desktop@2x.png  2x">
-      <source type="image/png" media="(min-width: 768px)" width="768" height="400"
-        srcset="images/map-tablet@1x.png 1x, images/map-tablet@2x.png  2x">
-      <img class="footer__map" src="images/map-mobile@1x.png" srcset="images/map-mobile@2x.png 2x" width="320"
-        height="362" alt="Карта">
-    </picture>
-    <section class="footer__top footer-top">
+        <section class="footer__top footer-top">
       <div class="footer-top__wrapper footer__top-index">
         <h3 class="footer-top__title">Приглашаем к сотрудничеству дилеров!</h3>
         <address class="footer-top__address-wrapper">
@@ -126,26 +148,48 @@
           <span class="footer-top__city">Санкт-Петербург</span>
         </address>
       </div>
+      <picture>
+        <source type="image/png" media="(min-width: 1440px)" width="1440" height="400"
+          srcset="images/map-desktop@1x.png 1x, images/map-desktop@2x.png  2x">
+        <source type="image/png" media="(min-width: 768px)" width="768" height="400"
+          srcset="images/map-tablet@1x.png 1x, images/map-tablet@2x.png  2x">
+        <img class="footer__map" src="images/map-mobile@1x.png" srcset="images/map-mobile@2x.png 2x" width="320"
+          height="362" alt="Карта">
+      </picture>
     </section>
-    <div class="footer__bottom footer-bottom">
+    <div class="footer__bottom footer__bottom">
+      <a href="index.html">
+        <svg class="footer__logo" width="128" height="24">
+          <use href="images/icons/stack.svg#footer-logo"></use>
+        </svg>
+      </a>
       <div class="footer-bottom__social social">
         <ul class="social__list">
           <li class="social__item">
             <a href="vk.com">
-              <p>/</p>
+              <svg class="social__image" width="29" height="17">
+                <use href="images/icons/stack.svg#vkontakte"></use>
+              </svg>
             </a>
           </li>
           <li class="social__item"><a href="youtube.com">
-              <p>/</p>
-            </a></li>
+            <svg class="social__image" width="24" height="18">
+              <use href="images/icons/stack.svg#youtube"></use>
+            </svg>
+          </a></li>
           <li class="social__item"><a href="telegram.com">
-              <p>/</p>
+            <svg class="social__image" width="19" height="17">
+              <use href="images/icons/stack.svg#telegram"></use>
+            </svg>
             </a></li>
         </ul>
       </div>
       <div class="footer-bottom__htmlacademy htmlacademy">
         <a class="htmlacademy__link" href="htmlacademy.ru">
           <p class="htmlacademy__text">HTML Academy</p>
+          <svg class="social__image" width="27" height="34">
+            <use href="images/icons/stack.svg#html_academy"></use>
+          </svg>
         </a>
       </div>
     </div>
