--- a/source/form.html
+++ b/source/form.html
@@ -13,16 +13,12 @@
 
 <body>
   <header class="main-header">
+    <a class="main-header__logo" href="index.html">
+      <span class="main-header__image visually-hidden">/</span>
+      <span class="main-header__logo--text visually-hidden">/</span>
+    </a>
+    </a>
     <nav class="main-header__nav main-nav">
-        <picture>
-        <source media="(min-width: 1440px)" srcset="images/logo_desktop.svg" width="70" height="59" type="image/svg+xml">
-        <source media="(min-width: 768px)" srcset="images/logo_tablet.svg" width="60" height="50" type="image/svg+xml">
-        <img src="images/logo_mobile.svg" width="33" height="38" alt="Логотип Cat Energy.">
-      </picture>
-      <picture>
-        <source media="(min-width: 1440px)" srcset="images/logo_cat_energy.svg" width="118" height="21" type="image/svg+xml">
-        <img src="images/logo_cat_energy.svg" width="101" height="18" alt="Логотип Cat Energy.">
-      </picture>
       <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
@@ -146,7 +142,7 @@
   <div class="footer-bottom__htmlacademy htmlacademy">
     <a class="htmlacademy__link" href="htmlacademy.ru">
       <p class="htmlacademy__text">HTML Academy</p>
-      <svg class="social__image" width="27" height="34">
+      <svg class="htmlacademy__image" width="27" height="34">
         <use href="images/icons/stack.svg#html_academy"></use>
       </svg><span class="visually-hidden">/</span>
     </a>
